# brain2behaviour

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
atlases/StandardSurface32k_fs_LR/: midInflated.L.surf.gii  midInflated.R.surf.gii  top90GrpGrad.L.32k.npy  top90GrpGrad.R.32k.npy
atlases/cammoun/: atl-Cammoun2012_space-fslr32k_res-060_hemi-L_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-060_hemi-R_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-125_hemi-L_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-125_hemi-R_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-250_hemi-L_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-250_hemi-R_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-500_hemi-L_deterministic.label.gii  atl-Cammoun2012_space-fslr32k_res-500_hemi-R_deterministic.label.gii
atlases/random_parcellations/: random01.L.label.gii  random01.R.label.gii  random03.L.label.gii  random03.R.label.gii  random04.L.label.gii  random04.R.label.gii  random05.L.label.gii  random05.R.label.gii  random06.L.label.gii  random06.R.label.gii  random07.L.label.gii  random07.R.label.gii  random08.L.label.gii  random08.R.label.gii  random09.L.label.gii  random09.R.label.gii  random10.L.label.gii  random10.R.label.gii  random11.L.label.gii  random11.R.label.gii  randomEquidistant.L.label.gii  randomEquidistant.R.label.gii
measure/: SendDistanceMeasures.sh  SendDistanceMeasuresAGING.sh  SendFCMeasures.sh  ex_workList_dist.txt  ex_workList_fc.txt  measure_FC.py  measure_distance.py
(+62 files in other folders)
